TODOs coming out of discussion with Tara

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1,6 +1,14 @@
  \newcommand{\version}{0.6}
 
 %todo
+% focused OMS = synonym for structured OMS
+% homogeneous OMS
+% logic graph
+% OMS language graph
+% heterogeneous environment: logic graph + OMS language graph + supports relation; one global heterogeneous environment with subenvironments for specific purposes
+% language, subclasses: OMS language, query language
+% language/logic/mapping registration process - maybe in a different document
+
 %[08:15] TillMossakowski1: p.1: is just about ontologies. Some words about models and specifications should be added. Probably the RFP is a source here.
 %[08:38] TillMossakowski1: section 7: section titles should probably taken from RFP, since we improved them there
 %[08:42] FabianNeuhaus: Include a section on usage scenarios and goals as section 7. The design decisions would then answer to scenarios. Reuse material from RFP
