--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -388,3 +388,28 @@ ZimmerEuze06,
   isbn      = {978-1-57735-516-8},
 }
 
+@InProceedings{MossakowskiTarlecki09,
+  author = {Till Mossakowski and Andrzej Tarlecki},
+  title = {Heterogeneous Logical Environments for Distributed Specifications},
+  year = {2009},
+  editor = {Andrea Corradini and Ugo Montanari},
+  booktitle = {WADT 2008},
+  publisher = {Springer},
+  series = {Lecture Notes in Computer Science},
+  number = {5486},
+  pages = {266--289},
+  keywords = {institutions heterogeneous specification comorphism},
+  url = {http://dx.doi.org/10.1007/978-3-642-03429-9_18},
+  pdfurl = {http://www.informatik.uni-bremen.de/~till/papers/disthet.pdf},
+  abstract = {We use the theory of institutions to capture the concept of a
+heterogeneous logical environment as a number of institutions linked
+by institution morphisms and comorphisms.  We discuss heterogeneous
+specifications built in such environments, with inter-institutional
+specification morphisms based on both institution morphisms and
+comorphisms.
+We distinguish three kinds of heterogeneity:
+(1) specifications in logical environments with universal logic
+(2) heterogeneous specifications focused at a particular logic, and
+(3) heterogeneous specifications distributed over a number of logics.},
+  status = {Reviewed}
+}
